@@ -1,3 +1,9 @@
+2006-11-13  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* src/gcompris/properties.c: (gc_prop_config_file_get),
+	(gc_prop_new): changed to no more use open. open is not portable
+	and it fails to open file with utf8 characters on windows.
+
 2006-11-12  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* src/gcompris/menu.c: (_add_xml_to_data): no more save translated text in the base.
